# FMI-Materials

fmi1/Tehnici web/: README.md  package-lock.json
fmi1/Tehnici web/Examen 2024/: badger.html  badger.js  bird.html  zap.html  zap.js
fmi1/Tehnici web/Laborator 1/: README.md
fmi1/Tehnici web/Laborator 10/: cinemateca.html  cinemateca.js  cinemateca.json  cinemateca.xml
fmi1/Tehnici web/Laborator 2/: README.md
fmi1/Tehnici web/Laborator 3/: index.css  index.html  index.ts  package-lock.json  package.json
fmi1/Tehnici web/Laborator 6/: ttt.html  ttt.js
fmi1/asc/lab1/: CMakeLists.txt  main.c
fmi1/asc/lab2/: .gdb_history  add  add.s  ex  exercitii.s  test  test.s
fmi1/asc/lab7/: factorial.s  prime  prime.s  prime_c.s  tri.c  triunghi.py
fmi1/asc/riscv/: lab10.md  lab9
fmi1/bd/colcoviu/: Scanteie_Alexandru_Ioan_151_1.sql
fmi1/itbi/: lab6_itbi.txt
fmi1/itbi/Lab/: lab4_itbi.txt  lab5_itbi.txt
fmi1/lfa/lab1/: finite_automata.fdb_latexmk  finite_automata.fls  finite_automata.tex  implementare_finit_automat.py
fmi1/lfa/tema1/: tema1_DFA.py
fmi1/lfa/tema3/: README.md  cfg.py
fmi1/lmc/lab1/: ex2.pl  lab1.pl
fmi1/poo/colocviu2025/: Angajat.cpp  Angajat.h  Bautura.cpp  Bautura.h  Bucatar.cpp  Bucatar.h  Burger.cpp  Burger.h  Casier.cpp  Casier.h  Comanda.cpp  Comanda.h  Desert.cpp  Desert.h  Exceptie.cpp  Exceptie.h  Livrator.cpp  Livrator.h
fmi1/poo/lab1/: CMakeLists.txt  Makefile  README.md  main.cpp  polynomial.cpp  polynomial.h  polynomial_tests.cpp  test_hw3.cpp  vector.cpp  vector.h  vector_tests.cpp
fmi1/programarea_algoritmilor/: input.txt
(+434 files in other folders)
